accounting/deployment-persistence.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persistence-deployment
  namespace: accounting
  labels:
    app: persistence
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: persistence
  template:
    metadata:
      labels:
        app: persistence
    spec:
      containers:
        - name: testapp
          image: davidmachacek/testapp:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
