accounting/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: accounting
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: backend
