accounting/networkPolicy-access-to-persistence.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: accounting
  name: restrict-access-to-persistence
spec:
  podSelector:
    matchLabels:
      app: persistence
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
