accounting/networkPolicy-deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: accounting
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
    - Egress
