accounting/networkPolicy-deny-from-other-namespace.yaml
kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  namespace: accounting
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
